--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -26,22 +26,27 @@ body {
        & > div:nth-child(2):hover{
         opacity: 0.7;
     }
-    //    & > div:first-child{
-    //        order: 1;
-    //    }
-    //    & > div:nth-child(2){
-    //     order: 2;
-    //    }
-    //    & > div:nth-child(3){
-    //        order: 4;
-    //    }
-    //    & > div:nth-child(4){
-    //        order: 3;
-    //    }
 
    }
 }
-
+.output-wrapper{
+    display: flex;
+    justify-content: space-between;
+}
 .border {
     border-bottom: 1px solid #b3b3b3;
+}
+.completed {
+    cursor: not-allowed;
+}
+.forinput {
+    width: 1400px;
+    max-width: 1400px;
+    margin: 0 auto;
+    input {
+        width: 300px;
+        height: 50px;
+        margin-left: 500px;
+        border-radius: 6px;
+    }
 }
